Menu: Don't create platform item for QQuickMenuItemContainers

They don't have any QPA counterpart as they're just plain containers.
This also removes that "Menu does not contain the item to be removed"
warning on Mac.

Task-Number: QTBUG-32197
Change-Id: I06e08817194c2e3ad3efd7ded193bfac9d3a1948
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>